--- a/app/requirements-frozen.txt
+++ b/app/requirements-frozen.txt
@@ -8,3 +8,7 @@ packaging==24.0
 psycopg2==2.9.9
 redis==5.0.4
 sqlparse==0.5.0
+google-auth==2.37.0
+djangorestframework-simplejwt==5.4.0
+requests==2.32.3
+django-rest-framework-social-oauth2==1.2.0
