--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,3 +5,7 @@ hiredis>=2.3.2,<3
 redis>=5.0.4,<6
 django-redis-sessions>=0.6.2,<1
 djangorestframework>=3.15.2,<4
+google-auth>=2.37.0,<3
+djangorestframework-simplejwt>=5.4.0,<6
+requests>=2.32.3,<3
+django-rest-framework-social-oauth2>=1.2.0,<2
