--- a/app/requirements-frozen.txt
+++ b/app/requirements-frozen.txt
@@ -12,3 +12,5 @@ google-auth==2.37.0
 djangorestframework-simplejwt==5.4.0
 requests==2.32.3
 django-rest-framework-social-oauth2==1.2.0
+django-cors-headers==4.6.0
+pillow==11.1.0
