--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -9,3 +9,5 @@ google-auth>=2.37.0,<3
 djangorestframework-simplejwt>=5.4.0,<6
 requests>=2.32.3,<3
 django-rest-framework-social-oauth2>=1.2.0,<2
+django-cors-headers>=4.6.0,<5
+pillow>=11.1.0,<12
