--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,10 @@ server {
         alias /app/static;
     }
 
+    location /media/ {
+        alias /app/media/;
+    }
+
     location / {
         proxy_pass http://app:8000;
         proxy_set_header Host $host;
