--- a/production.yml
+++ b/production.yml
@@ -17,6 +17,7 @@ services:
       - redis:redis
     volumes:
       - app-static:/app/static
+      - app-media:/app/media
 
   nginx:
     restart: unless-stopped
@@ -27,6 +28,7 @@ services:
       - "./nginx/default.conf:/etc/nginx/conf.d/default.conf"
       - "./nginx/nginx.conf:/etc/nginx/nginx.conf"
       - app-static:/app/static
+      - app-media:/app/media
     links:
       - app:app
 
@@ -49,5 +51,6 @@ services:
 
 volumes:
   app-static:
+  app-media:
   pg-data:
   redis-data:
